--- a/angular/src/app/main/checklist/checklist.component.html
+++ b/angular/src/app/main/checklist/checklist.component.html
@@ -16,13 +16,14 @@
                         </div>
                         <div class="record-card-header-bottom">
                             <div class="record-card-header-bottom-inner1">
-                                <button class="btn arrow-btn left-arrow-btn btn-square">
+                                <button class="btn arrow-btn left-arrow-btn btn-square" (click)="monthChangeHeader(0)">
                                     <img src="./assets/media/ClosingCheckList/left-arrow.svg" alt="left-arrow">
                                 </button>
-                                <button class="btn arrow-btn right-arrow-btn btn-square">
+                                <button class="btn arrow-btn right-arrow-btn btn-square" (click)="monthChangeHeader(1)">
                                     <img src="./assets/media/ClosingCheckList/right-arrow.svg" alt="right-arrow">
                                 </button>
-                                <h5>January 2020</h5>
+                                <h5>{{currentMonth}} {{currentYear}}</h5>
+                               
                             </div>
                             <div class="record-card-header-bottom-inner2">
                                 <div class="upper-content">
