--- a/angular/src/app/main/checklist/task-details/task-details.component.css
+++ b/angular/src/app/main/checklist/task-details/task-details.component.css
@@ -10,3 +10,27 @@
 .comment-wrapper > p{
     padding-left: 60px;
 }
+.attachments_section{
+    display: inline-block;
+    background-color: #45414E14;
+    max-width: 197px;
+    width: 100%;
+    margin: 20px 0;
+    height: 42px;
+}
+.attachments_section .attachement_btn{
+    background: transparent;
+    border: none;
+    color: #606060;
+}
+.attachments_section .attachement_btn img{
+    max-width: 100%;
+    width: 40px;
+}
+.attachments_section .cross-btn{
+    background: transparent;
+    border: none;
+    color: #606060;
+    float: right;
+    line-height: 41px;
+}
