--- a/angular/src/app/main/checklist/user-list-component/user-list-component.component.html
+++ b/angular/src/app/main/checklist/user-list-component/user-list-component.component.html
@@ -10,7 +10,7 @@
 
 
 
-<div class="form-group">
+<div class="form-group search-field">
     <div>
         <p-autoComplete [(ngModel)]="selectedUserId" [suggestions]="users" (completeMethod)="onSearchUsers($event)" field="name"
             placeholder="Search..." [minLength]="1" name="SingleSelectInput" id="SingleSelectInput" [multiple]="false"
