--- a/angular/src/app/main/categories/categorie-drop-down/categorie-drop-down.component.html
+++ b/angular/src/app/main/categories/categorie-drop-down/categorie-drop-down.component.html
@@ -1,7 +1,7 @@
 
     <div class="form-group">
         <label>Category</label>
-        <select id="categories" (change)="categoryValuee()" name="categories" [(ngModel)]="categoryId" class="form-control input-medium select2-search select2-search--inline"  >
+        <select id="categories" (change)="categoryValuee()" name="categories" [(ngModel)]="categoryId" class="bg-white border form-control input-medium select2-search select2-search--inline"  >
             <option  *ngFor="let item of category;" 
             [value]="item.value">
             {{item.name}} 
