--- a/angular/src/app/main/checklist/checklist.component.html
+++ b/angular/src/app/main/checklist/checklist.component.html
@@ -120,7 +120,7 @@
                         </div>
                     </div>
                     <div class="primeng-paging-container">
-                        <div class="">
+                        <div class="table-box">
 
                             <!--<Primeng-TurboTable-Start>-->
                             <div class="task-table" [busyIf]="primengTableHelper.isLoading">
@@ -158,7 +158,7 @@
                             <!--<Primeng-TurboTable-End>-->
                             <table class="table record-table">
                                 <tbody>
-                                    <tr >
+                                   
                                     <tr *ngFor="let i of ClosingCheckList" class="task-table-inner">
 
                                         <td (click)="RedirectToDetail(i.closingCheckListForViewDto.id)">
@@ -196,7 +196,6 @@
                                             </div>
                                         </td>
                                     </tr>
-                                    <tr>
                                 </tbody>
                             </table>
                             <div class="primeng-no-data" *ngIf="primengTableHelper.totalRecordsCount == 0">
