--- a/angular/src/app/main/checklist/create-or-edit-task/create-or-edit-task.component.css
+++ b/angular/src/app/main/checklist/create-or-edit-task/create-or-edit-task.component.css
@@ -15,3 +15,15 @@
 }
 .drag_drop_box {
 }
+.input-arrow{
+    position: relative;
+}
+.input-arrow::after{
+    content: "▼";
+    position: absolute;
+    top: 50%;
+    right: 5px;
+    transform: translateY(-50%);
+    font-size: 11px;
+    color: #606060;
+}  
