--- a/angular/src/app/main/checklist/createtask/createtask.component.css
+++ b/angular/src/app/main/checklist/createtask/createtask.component.css
@@ -14,6 +14,7 @@
     overflow: auto;
 }
 .drag_drop_box {
+    margin-top: 66px;
 }
 .input-arrow{
     position: relative;
@@ -27,3 +28,7 @@
     font-size: 11px;
     color: #606060;
 }  
+::ng-deep .uppy-Dashboard-inner {
+    min-height:220px !important;
+    height: 220px !important;
+}
