--- a/angular/src/app/main/checklist/task-details/task-details.component.css
+++ b/angular/src/app/main/checklist/task-details/task-details.component.css
@@ -22,3 +22,11 @@
 .attachment-box{
   padding: 20px 0;
 }
+::ng-deep .uppy-Dashboard-inner {
+    min-height:220px !important;
+    height: 220px !important;
+}
+
+.drop_drop_box {
+    margin-top: 40px;
+}
