--- a/angular/src/styles.css
+++ b/angular/src/styles.css
@@ -306,6 +306,10 @@ h6{
     font-size: 12px;
     color: #575962;
 }
+.bg-color{
+    color: #606060 !important;
+
+}
 select {
     background-color: #F1F2FC !important;
     color: #606060 !important;
